# aegis-vcs

./: Cargo.toml  DOCUMENTATION.md  LEGAL.md  LICENSE  README.md  documentation.html  index.html
application/: Cargo.toml
application/src/: main.rs
src/: main.rs
