[package]
name = "aegis-vcs"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
chrono = "0.4"
ed25519-dalek = "2"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
whoami = "1.5"
base58 = "0.2"
walkdir = "2"
